# tradeBotServer

./: .ai_context_profile.json  .dockerignore  .env_backup  .gitignore  BRACKET_ORDERS_ANALYSIS.md  CACHE_TTL_EXPLANATION.md  CHART_READY.md  CHART_UPGRADE_COMPLETE.md  CLEANUP_PLAN.md  CRITICAL_FIXES_SUMMARY.md  DATABASE_COMPARISON.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_FIXES.md  DEPLOYMENT_FIX_SUMMARY.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_READY.md  DEPLOYMENT_STATUS.md  Dockerfile  ENVIRONMENT_VARIABLES.md  ENVIRONMENT_VARIABLES_FIXED.md  FIXES_APPLIED.md  FIXES_SUMMARY.md  FRONTEND_BACKEND_INTEGRATION.md  HOW_TO_UPDATE_ENV.md  IMPLEMENTATION_COMPLETE.md  INTEGRATION_SUMMARY.md  MODULAR_STRATEGY_GUIDE.md  NEW_ENV_VARIABLES_TO_ADD.txt  OPTIMIZATION_GUIDE.md  OPTIMIZATION_SUMMARY.md  OPTIMIZATION_SUMMARY_V2.md  OPTION_A_IMPLEMENTATION.md  OVERNIGHT_STRATEGY_DEBUG.md  OVERNIGHT_STRATEGY_GUIDE.md  PERFORMANCE_FAQ.md  PRE_DEPLOYMENT_CHECKLIST.md  PRODUCTION_ENVIRONMENT.md  PROJECT_STRUCTURE.md  Procfile  (+72 more)
.cursor/: CONTEXT_PROFILE_README.md  context_profile.json
brokers/: __init__.py  topstepx_adapter.py
core/: account_tracker.py  auth.py  bar_aggregator.py  discord_notifier.py  market_data.py  (+5 more)
rust/: Cargo.toml  INSTALL.md  INSTALLATION_SUCCESS.md  QUICKSTART_BUILD.md  README.md  build.sh  install.sh  pyproject.toml
rust/benches/: order_execution_bench.rs
rust/src/: lib.rs
rust/src/database/: mod.rs
rust/src/order_execution/: mod.rs
rust/src/strategy_engine/: mod.rs
rust/src/websocket/: mod.rs
rust/tests/: order_execution_test.rs
(+289 files in other folders)
